--- a/style.css
+++ b/style.css
@@ -27,8 +27,6 @@ body {
 /* ///////////////////
 HEADER SECTION
 /////////////////// */
-.header {
-}
 
 .header__nav {
   display: flex;
@@ -36,10 +34,7 @@ HEADER SECTION
   align-items: center;
   position: relative;
 }
-.header__logo-box {
-}
-.header__logo {
-}
+
 .nav__links-box {
   display: flex;
   justify-content: space-between;
@@ -76,8 +71,6 @@ HEADER SECTION
   transform: scaleX(1);
 }
 
-.nav__cta-box {
-}
 .cta:link,
 .cta:visited {
   display: inline-block;
@@ -101,6 +94,8 @@ HEADER SECTION
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+
   display: none;
   z-index: 3;
 }
@@ -128,8 +123,6 @@ HEADER SECTION
 /* ///////////////////
 END HEADER SECTION
 /////////////////// */
-.main {
-}
 
 /* ///////////////////
  HERO SECTION
@@ -238,13 +231,10 @@ END CHOOSE SECTION
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 3rem;
-  /* padding: 2rem; */
 }
 .article__text-box {
   display: flex;
   flex-direction: column;
-  /* gap: 1rem; */
-  /* align-items: center; */
   justify-content: center;
 }
 .img__box {
@@ -296,6 +286,7 @@ END ARTICLE SECTION
 
 .footer {
   background-color: #2d314d;
+  margin-bottom: 5rem;
 }
 .footer__section {
   display: grid;
@@ -308,9 +299,6 @@ END ARTICLE SECTION
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-}
-
-.footer__logo {
 }
 
 .easybank__box div {
@@ -363,8 +351,13 @@ END ARTICLE SECTION
   font-weight: 100;
 }
 
-/* .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
+.attribution {
+  font-size: 2rem;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
 /* ///////////////////////////////
 MEDIA QUERIES
@@ -402,9 +395,6 @@ MEDIA QUERIES
   html {
     font-size: 50%;
   }
-}
-
-@media only screen and (max-width: 43.75em) {
   .hero__section {
     flex-direction: column;
     gap: 2rem;
@@ -421,13 +411,14 @@ MEDIA QUERIES
     /* max-height: 80%; */
     overflow-y: hidden;
   }
-
   .hero__img {
     overflow-y: visible;
     width: 60%;
     margin-top: 0;
   }
+}
 
+@media only screen and (max-width: 43.75em) {
   .choose {
     margin-top: 0;
   }
@@ -474,7 +465,6 @@ MEDIA QUERIES
 
   .nav-open .overlay {
     display: block;
-    /* z-index: 4; */
   }
 
   .header {
@@ -482,7 +472,6 @@ MEDIA QUERIES
     width: 100vw;
     z-index: 5;
     background-color: #ffffffea;
-    /* backdrop-filter: blur(5px); */
   }
 
   .nav-open .close-icon {
